--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </header>
       <form action="#" class="email l-no-email-error">
         <div class="email-form">
-          <input class="email-input email-input__default-border" type="email" placeholder="Your email address...">
+          <input class="email-input email-input__default-border" type="text" placeholder="Your email address...">
           <div class="email-error l-no-display">Please provide a valid email address</div>
         </div>
         <button class="email-btn">Notify Me</button>
