fix: changed .header-1 tag to <h1> and removed text from alt property for the image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               d="M85.072 25c.32 0 .55-.059.688-.176.139-.117.208-.315.208-.592v-4c0-.363-.16-.544-.48-.544h-4.384a.498.498 0 00-.368.144c-.096.096-.144.24-.144.432v4.064c0 .448.235.672.704.672h3.776z" />
           </g>
         </svg>
-        <div class="header-1">We are launching <span class="header-1-soon">soon!</span></div>
+        <h1 class="header-1">We are launching <span class="header-1-soon">soon!</span></h1>
         <div class="header-2">Subscribe and get notified</div>
       </header>
       <form action="#" class="email l-no-email-error">
@@ -39,7 +39,7 @@
         <button class="email-btn">Notify Me</button>
       </form>
     </div>
-    <img class="illustration" src="/images/illustration-dashboard.png" alt="Illustration dashboard">
+    <img class="illustration" src="/images/illustration-dashboard.png" alt="">
     <div>
       <div class="social">
         <a class="social-icons social-icons-fb" href="#"><i class="fab fa-facebook-f"></i></a>
